Huge commit: Full Message System
- Important improvements in inbox list.
- Deletion message system added.
- Previsualization of messages.
- Outbox added.
- Possibility of opening individual messages.
- Same conversation messages are listed in individual message screen.

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,4 @@
 - Gender requirement at sign up
 - Email notification
 - Change results 'Creator' column: Nickname instead of email.
+- Augment varchar digits in Message so that time also fits.
