--- a/TODO.txt
+++ b/TODO.txt
@@ -1,17 +1,15 @@
 - Handle database (no-sql) exception, handle all exceptions.
-- (DONE) Credits should be INT not FLOATS.
 - Use of LINQ.
 - Report.
 - Adjust CSS to fit Twitter box.
 - Comment the rest of the files.
 - Categories in projects.
-- (DONE) Project comments.
 - Projects Development
 - Email notification
-- (DONE) Augment varchar digits in Message so that time also fits.
-- (DONE) Password security
 - Singleton class
-- (DONE) Complete CommentBE and CommentDAC
 - Give funcionality to the DEVELOP link at project profiles.
 - Searchs "empty entry": error or show ALL?
-- (DONE) Fix contributions: does not create more than one entry per project/user/date (with no time!)
+- Do we want to let users to "develop" the same project just once?
+- Control what the create development returns so we change the feedback message.
+- we cannot log out being on those panel-controlled pages if we do not use the textbox.
+- Use BE and DAC in the aspx.cs pages and not the SQL directly.
