SQL Queries moved from GridViews (AspC#)  to DACs
Now, SQl queries are always performed in DACs. New methods that are
called from GridViews return always DataSets, which are later associated
with GridViews.

- This operation has been performed between this and previous commit.
- Previous: Messages and Projects DACs update.
- This: Contributions, Developments and Comments ones.

--- a/TODO.txt
+++ b/TODO.txt
@@ -13,3 +13,4 @@
 - Control what the create development returns so we change the feedback message.
 - we cannot log out being on those panel-controlled pages if we do not use the textbox.
 - Use BE and DAC in the aspx.cs pages and not the SQL directly.
+- Check that users are logged in when trying to comment in a project.
